# aerodynamic_simulator

./: .gitmodules  CMakeLists.txt  README.md
include/: callback.h  setup.h  shader.h  utility.h
model/: test.c
shader/: fragment.glsl  vertex.glsl
src/: callback.c  main.c  setup.c  shader.c
